--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,65 @@
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+bcrypt==3.1.4
+bleach==2.1.2
 blinker==1.4
+certifi==2017.11.5
+cffi==1.11.5
+chardet==3.0.4
 click==6.7
-Flask==0.9
-Flask-DebugToolbar==0.10.0
-Flask-SQLAlchemy==0.16
-Flask-WTF==0.8
+configparser==3.5.0
+coverage==4.5.1
+decorator==4.1.2
+entrypoints==0.2.3
+enum34==1.1.6
+Flask==0.10.1
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.1
+functools32==3.2.3.post2
+future==0.16.0
+gunicorn==19.8.1
+html5lib==1.0.1
+idna==2.6
+ipykernel==4.7.0
+ipython==5.5.0
+ipython-genutils==0.2.0
 itsdangerous==0.24
-Jinja2==2.6
-MarkupSafe==1.0
-pkg-resources==0.0.0
-psycopg2==2.6.1
-pytz==2018.4
-SQLAlchemy==0.7.9
-Werkzeug==0.8.3
-WTForms==1.0.2
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-client==5.2.0
+jupyter-core==4.4.0
+MarkupSafe==0.23
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.2.2
+oauthlib==2.0.6
+pandocfilters==1.4.2
+pathlib2==2.3.0
+pexpect==4.3.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+psycopg2==2.7.1
+ptyprocess==0.5.2
+pycparser==2.18
+Pygments==2.2.0
+python-crontab==2.2.8
+python-dateutil==2.6.1
+python-twitter==3.3
+pyzmq==16.0.3
+requests==2.18.4
+requests-oauthlib==0.8.0
+scandir==1.6
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.11.0
+SQLAlchemy==1.1.7
+terminado==0.8.1
+testpath==0.3.1
+tornado==4.5.2
+traitlets==4.3.2
+urllib3==1.22
+virtualenv==15.0.1
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.10.4
