--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,17 @@
+[[source]]
+url = "https://pypi.python.org/simple"
+verify_ssl = true
+name = "pypi"
+
+[packages]
+click = "*"
+Flask = "*"
+itsdangerous = "*"
+Jinja2 = "*"
+MarkupSafe = "*"
+Werkzeug = "*"
+gunicorn = "*"
+
 [requires]
 
 python_version = "2.7"
